--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "proxy-server",
   "version": "1.0.0",
-  "type": "module",
   "main": "proxy.js",
   "scripts": {
     "start": "node proxy.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.1"
   }
 }
